--- a/css/components.css
+++ b/css/components.css
@@ -5,7 +5,13 @@
 	padding: 35px 25px;
 	display: block;
 	margin-bottom: 15px;
+	transition: all 200ms ease-in-out;
 }
+	@media(max-width: 767px) {
+		.linkbox {
+			padding: 30px 20px;
+		}
+	}
 	.linkbox:after {
 		content: '';
 		display: block;
@@ -33,4 +39,7 @@
 		line-height: 22px;
 		font-size: 16px;
 		color: rgba(255, 255, 255, 0.7);
+	}
+	.linkbox:hover {
+		opacity: 0.8;
 	}
