--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ section.hero {
 .skills {
 	text-align: center;
 	font-size: 0;
+	opacity: 0.7;
 }
 	.skills li {
 		display: inline-block;
@@ -209,6 +210,7 @@ section.band.contacto .border__sub {
 		padding-left: 25px;
 		display: block;
 		position: relative;
+		transition: all 200ms ease-in;
 	}
 		.contactoinfo li a:before {
 			content: '';
@@ -220,6 +222,10 @@ section.band.contacto .border__sub {
 			position: absolute;
 			left: 0;
 			top: calc(50% - 5px);
+		}
+		.contactoinfo li a:hover {
+			color: #EB657C;
+			margin-left: 4px;
 		}
 /*/Contacto*/
 
