Agrego btn contacto y otros ajustes

--- a/css/components.css
+++ b/css/components.css
@@ -62,6 +62,7 @@
 	bottom: -27px;
 	background: #212D40;
 	transition: all 200ms ease-in;
+	cursor: pointer;
 }
 	.border__btn:hover {
 		background: #EB657C;
