--- a/css/main.css
+++ b/css/main.css
@@ -24,19 +24,26 @@ body {
 section.hero {
 	text-align: center;
 	padding-top: 100px;
-	margin-bottom: 200px;
+	margin-bottom: 220px;
 }
 
 .skills {
 	text-align: center;
 	font-size: 0;
 	opacity: 0.7;
+	display: block;
+	margin-bottom: 35px;
 }
 	.skills li {
 		display: inline-block;
 		vertical-align: middle;
 		margin: 10px 30px;
 	}
+
+section.hero .border__btn {
+	position: static;
+	transform: translateX(0);
+}
 
 section.border {
 	margin-bottom: 100px;
